autenticacao jwt nas rotas e documentacao swagger com bearer
