# src/routes/clientes.ts
@@ -26,6 +26,11 @@ router.get("/", authMiddleware, async (req, res) => {
 #swagger.tags = ['Clientes']
 #swagger.summary = 'Lista os clientes'
 #swagger.description = 'Retorna a lista de clientes cadastrados. Requer token de autenticação.'
+#swagger.security = [
+  {
+    "bearerAuth": []
+  }
+]
 #swagger.parameters['authorization'] = {
 in: 'header',
 required: true,
@@ -102,6 +107,11 @@ router.delete("/:id", authMiddleware, async (req, res) => {
 #swagger.tags = ['Clientes']
 #swagger.summary = 'Exclui um cliente'
 #swagger.description = 'Exclui um cliente existente.'
+#swagger.security = [
+  {
+    "bearerAuth": []
+  }
+]
 #swagger.parameters['authorization'] = {
 in: 'header',
 required: true,
@@ -149,6 +159,11 @@ router.put("/:id", authMiddleware, async (req, res) => {
 #swagger.tags = ['Clientes']
 #swagger.summary = 'Atualiza um cliente'
 #swagger.description = 'Atualiza os dados de um cliente existente.'
+#swagger.security = [
+  {
+    "bearerAuth": []
+  }
+]
 #swagger.parameters['authorization'] = {
 in: 'header',
 required: true,
