# src/routes/itensPedido.ts
@@ -10,6 +10,11 @@ router.get("/", authMiddleware, async (req, res) => {
 #swagger.tags = ['Itens de Pedido']
 #swagger.summary = 'Lista todos os itens de pedido'
 #swagger.description = 'Retorna uma lista com todos os itens de pedido cadastrados.'
+#swagger.security = [
+  {
+    "bearerAuth": []
+  }
+]
 #swagger.parameters['authorization'] = {
 in: 'header',
 required: true,
@@ -49,6 +54,11 @@ router.get("/:id", authMiddleware, async (req, res) => {
 #swagger.tags = ['Itens de Pedido']
 #swagger.summary = 'Retorna um item de pedido específico'
 #swagger.description = 'Retorna os detalhes de um item de pedido com base no ID fornecido.'
+#swagger.security = [
+  {
+    "bearerAuth": []
+  }
+]
 #swagger.parameters['authorization'] = {
 in: 'header',
 required: true,
